--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.13.1",
     "kafkajs": "^1.15.0",
     "pg": "^8.7.1",
+    "pg-query-stream": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
