--- a/package.json
+++ b/package.json
@@ -75,7 +75,11 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/apps/"
-    ]
+      "<rootDir>/apps/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@app/kafka(|/.*)$": "<rootDir>/libs/kafka/src/$1"
+    }
   }
 }
